--- a/index.html
+++ b/index.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="пиво,пивоваріння, рецепти пива, паби, ЛЬвів>
     <link rel="icon" href="images/hop.jpg">
-    <title>Beer&brewing Blog</title>
+    <title>Beer&Brewing Blog</title>
 </head>
 <body>
-<header>
+<header class="page-header">
+      <div class="container">
+      093-076-3381<br>
+      juramykhailiv@gmail.com
+    </div>
 <h1>Меню сайту</h1>
     <nav>
       <ul>
         <li>
-            <a href="">Пиво</a>
+            <a href="beer.html">Пиво</a>
         <li>
-            <a href="">Пивоваріння </a>
-        li>
-            <a href="">Пивні місця</a>
+            <a href="brewing.html">Пивоваріння </a>
+        <li>
+            <a href="beerpubs.html">Пивні місця</a>
+            <li>
+            <a href="test.html">test</a>
         </ul>
     </nav>
 </header>
 <article> Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкраших його сортів , технології приготування та місця де можна випити цей чудовий напій.
 </article>
+<h2>Остані публікації</h2>
+<h2><a href="aboutme.html">Про мене</a> <h2>
 
-    
+ <footer class="page-footer">
+    093-076-33-81<br>
+    juramykhailiv@gmail.com
+    </footer>
 </body>
 </html>
