--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,14 @@
     <title>Про мене</title>
 </head>
 <body>
+<nav>
+<ul class="menu-main">
+      <li>
+            <a href="index.html">Назад</a>
+      </li>
+</ul>
+</nav>
+<h1> Трішки інформації про мене</h1>
     
 </body>
 </html>
