--- a/beerpubs.html
+++ b/beerpubs.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="images/hop.jpg">
-    <title>XПивні заклади</title>
+    <title>Пивні заклади</title>
 </head>
 <body>
+<header class="page-header">
+      <div class="container">
+      093-076-3381<br>
+      juramykhailiv@gmail.com
+    </div>
+<h1></h1>
+    <nav class="top-menu">
+      <ul class="menu-main">
+      <li>
+            <a href="index.html">Домашня сторінка</a>
+        <li>
+            <a href="beer.html">Пиво</a>
+        <li>
+            <a href="brewing.html">Пивоваріння </a>
+        <li>
+            <a href="beerpubs.html">Пивні місця</a>
+        </ul>
+    </nav>
+</header>
     
 </body>
 </html>
