--- a/beer.html
+++ b/beer.html
@@ -14,7 +14,8 @@
       093-076-3381<br>
       juramykhailiv@gmail.com
     </div>
-<h1></h1>
+<h1>Про пиво</h1>
+
     <nav class="top-menu">
       <ul class="menu-main">
       <li>
@@ -28,6 +29,85 @@
         </ul>
     </nav>
 </header>
-    
+<h2>Яке  пиво буває </h2>
+<p>Скільки сортів пива існує? Цього, напевно, не знає ніхто. Крім звичного світлого, темного і нефільтрованого, кожен виробник намагається здивувати пивного гурмана різноманіттям сортів і яскравістю смаків. Їх на це надихнули малі броварні, які задали світовий тренд різноманітності пивних смаків.
+
+І все ж можна виділити 11 основних сортів, на які спирається у виробництві кожен пивний бренд.
+
+
+
+Пейл-ель (Pale Ale)
+
+З сучасних Пейл-елів в США почалася хвиля крафтового пива. Проте сам Пейл-ель - один з найстаріших сортів, який з'явився в Англії більше 300 років тому. Американські Пейл-елі містять більше хмелю, в порівнянні з англійськими, і трохи більше віддають цитрусовими і хвойними нотами. Для приготування напою використовується особливий солод, який надає йому бронзовий відтінок.
+
+Також варто відзначити популярний різновид цього сорту, відомий як індійський Пейл-ель (India Pale Ale, або IPA). У порівнянні зі звичайним елем цей напій містить більше хмелю і більший вміст алкоголю в складі.
+
+
+
+Пшеничний ель (Wheat Ale)
+
+Також відомий як вайсбір. Сорт родом з Південної Німеччини, Баварії. Там пивовари для виробництва солоду використовували пшеницю, а не традиційний ячмінь. В результаті напій набуває жовтувато-білий відтінок. Такий ель вважається найтиповішим літнім пивом.
+
+
+
+Бельгійський ель (Belgian Ale)
+
+Що об'єднує всю різноманітність пивних сортів з Бельгії? Фенольні аромати: гвоздичні, пряні, трав'яні і навіть аромати жувальної гумки. Крім того, часто використовуються фруктові ефіри, зазвичай апельсинові, лимонні або бананові. Світлі бельгійські елі відрізняються ігристими бульбашками, як в шампанському. Темні елі володіють більш насиченим смаком. При їх приготуванні використовуються темні фруктові ефіри: родзинок, сливи і вишні.
+
+
+
+Кислий ель (Sour Ale)
+
+Один з найбільш унікальних сортів, які ви можете спробувати, - навмисно кислий ель. Кисле пиво частково або повністю сброжено дикими дріжджовими бактеріями. Колірна палітра широка: від насиченого червоного фландрійського елю до золотого солом'яного. Пахне такий напій фруктами і має специфічний гострий дріжджовий аромат.
+
+
+
+Бурий ель (Brown Ale)
+
+Бурий (або коричневий) ель, що з'явився ще в кінці XVIII століття, містить трохи хмелю і готується зі 100-відсоткового темного солоду. Бурий ель чітко пахне смаженим солодом. Американські сорти трохи більше віддають хмелем. Пиво має карамельно-горіховий присмак.
+
+
+
+Портер (Porter)
+
+Рубіново-чорного або темно-коричневого кольору, з характерним винним присмаком і сильним запахом солоду, портер - найкращий напій для холодних зимових вечорів. Унікальності йому додають нотки шоколаду, карамелі і лікеру. Більшість портерів містять багато хмелю і готуються переважно з темного солоду, що в результаті дає насичений смак, збалансовано гіркий і солодкий.
+
+
+
+Стаут (Stout)
+
+Стаут відрізняється темним, аж до чорного, кольором і тривалим післясмаком, який залежить від витримки і різновиди стаута. Також при виготовленні використовується сильно прожарений ячмінь, який надає Стауту характерний аромат гіркого шоколаду і кави.
+
+
+
+Світлий лагер (Pale Lager)
+
+Сухе, просте і чисте на смак пиво, яке можна назвати освіжаючим і навіть «хрустким». При наливанні видно приємний золотий колір напою. Гіркота дуже м'яка, практично непомітна. Оскільки витримується світлий лагер значно менше за часом, сторонніх присмаків і запахів він теж практично не має.
+
+
+
+Темний лагер (Dark Lager)
+
+Темний лагер готується з обжареного ячменю, тому його колір може бути від бурштинового до темно-коричневого з рубіновими проблисками. Піна зазвичай світлого жовто-коричневого кольору. Більшість напоїв цього сорту відрізняються смаком смаженого солоду, хлібу, можуть відчуватися нотки темних фруктів, карамелі, шоколаду. Присмак хмелю практично відсутній або віддає квітами.
+
+
+
+Бок (Bock)
+
+Зазвичай напій непрозорий, темно-бурштинового або коричневого кольору, з виразним солодовим смаком. Хміль практично не відчувається. Проте багато броварів, намагаючись збалансувати гіркоту хмелю, вдаються до хитрощів, намагаючись надати напою смакові відтінки ірису або карамелі.
+
+
+
+Янтарне пиво (Amber)
+
+Янтарне пиво можна віднести як до елів, так і до лагерів. Але воно відрізняється і від тих, і від інших: в янтарному пиві біттерність відчувається більше, ніж в елях, але менше, ніж в лагері. Гіркота хмелю збалансована солодом, але після кількох ковтків відчувається досить виразно.</p>
+
+<footer class="page-footer">
+ <svg width="220" height="60">
+    <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
+    </svg> <br>
+    <a href="https://t.me/beersandbrewing"> Телеграм канал</a><br>
+    Інстаграм
+    </footer>
 </body>
 </html>
