--- a/brewing.html
+++ b/brewing.html
@@ -28,6 +28,12 @@
         </ul>
     </nav>
 </header>
-    
+<footer class="page-footer">
+ <svg width="220" height="60">
+    <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
+    </svg> <br>
+    <a href="https://t.me/beersandbrewing"> Телеграм канал</a><br>
+    Інстаграм
+    </footer>
 </body>
 </html>
