--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <header class="page-header">
       <div class="container">
       093-076-3381<br>
-      juramykhailiv@gmail.com
+      juramykhailiv@gmail.com<br>
+      <a href="https://t.me/wkvarock">Telegram</a>
     </div>
-<h1></h1>
     <nav class="top-menu">
       <ul class="menu-main">
       <li>
-            <a href="index.html">Домашня сторінка</a>
+            <a href="index.html"> Домашня сторінка</a>
         <li>
             <a href="beer.html">Пиво</a>
         <li>
@@ -29,14 +29,18 @@
         </ul>
     </nav>
 </header>
-<article> Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкраших його сортів , технології приготування та місця де можна випити цей чудовий напій.
-</article>
-<h2>Остані публікації</h2>
-<h2><a href="aboutme.html">Про мене</a> <h2>
+<article> Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкраших його сортів , технології приготування та місця де можна випити цей чудовий напій. </article>
+<h2> Остані Публікації</h2>
+<h3> <a href="aboutme.html">Про мене</a> </h3>
+<img src="images/aboutmephoto.jpg" height="400" width="350" alt="моя фотографія">
+
 
  <footer class="page-footer">
-    093-076-33-81<br>
-    juramykhailiv@gmail.com
+ <svg width="220" height="60">
+    <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
+    </svg> <br>
+    <a href="https://t.me/beersandbrewing"> Телеграм канал</a><br>
+    Інстаграм
     </footer>
 </body>
 </html>
