--- a/aboutme.html
+++ b/aboutme.html
@@ -18,10 +18,11 @@
 <h2>Привіт усім, мене звати Юра</h2>
 <p>І я вирішив створити свій пивний блог, де буду описувати хороші сорти пива,новинки вітчизняних і зарубіжних  пивоварень ,<br> будемо пробувати варити своє домашнє пиво і розбиратися у цій технології, підберемо найкращі дріжджі  солод і хміль, <br>також опишу найкращі на мою думку пивні заклади Львова і можливо і інших міст.</p>
 <p> Цей блог вирішив також стоврити у <a href="https://t.me/beersandbrewing"> телеграмі</a> та інстаграмі, жож підписуйтеся і не соромтеся )<p>
+<p>Мені 25 рочків і я працюю барменом у одному львівському закладі, вважаю пиво найкращим алкогольним напоєм і дотримаюся правила: "краще випити менше, але хорошого та якісного" тому якщо в мене є вибір взяти 3 пляшки "Тетеріва" , або якогось "Закарпаського" то на ті гроші я візьму якесь одне, але хороше імпортне пиво, чи якесь крафтове наших пивоварень.</p>
 <p>Ця ідея в мене появилася вже давно, а все через те що мені надзвичайно важко вдається можливість вибору, все починається<br> від закладу в який я хочу піти і закінчується банально тим, що мені навіть важко вибрати яке я пиво буду пити.</p>
 </p>Тому я подумав чому не створити щось таке , що можливо допоможе комусь зробити легший вибір , напевно навіть не відомо скільки<br> точно існує
  сортів пива .Крім звичного світлого, темного і нефільтрованого, кожен виробник намагається здивувати пивного гурмана<br> різноманіттям сортів і яскравістю смаків. Їх на це надихнули малі броварні, які задали світовий тренд різноманітності пивних смаків.<br>
-І все ж можна виділити 11 основних сортів, на які спирається у виробництві кожен пивний бренд.
+І все ж можна виділити 11 основних сортів, на які спирається у виробництві кожен пивний бренд, але і 11 видів це також забагато,<br> тому я спробую найкраще описати кожен з них.
 
 </p>
  <div class="container">
