--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 <body>
 <header class="page-header">
       <div class="container">
-      093-076-3381<br>
-      juramykhailiv@gmail.com<br>
-      <a href="https://t.me/wkvarock">Telegram</a>
     </div>
     <nav class="top-menu">
       <ul class="menu-main">
@@ -29,7 +26,8 @@
         </ul>
     </nav>
 </header>
-<article> Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкраших його сортів , технології приготування та місця де можна випити цей чудовий напій. </article>
+<img src="images/home-page-beer-river.jpg" height="400" width="1330" alt="основна фотографыя сторінки">
+<article> Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкращих його сортів , технології приготування та місця де можна випити цей чудовий напій. </article>
 <h2> Остані Публікації</h2>
 <h3> <a href="aboutme.html">Про мене</a> </h3>
 <img src="images/aboutmephoto.jpg" height="400" width="350" alt="моя фотографія">
