--- a/beerpubs.html
+++ b/beerpubs.html
@@ -10,11 +10,6 @@
 </head>
 <body>
 <header class="page-header">
-      <div class="container">
-      093-076-3381<br>
-      juramykhailiv@gmail.com
-    </div>
-<h1></h1>
     <nav class="top-menu">
       <ul class="menu-main">
       <li>
@@ -28,6 +23,7 @@
         </ul>
     </nav>
 </header>
+<img src="images/pab.jpg" height="400" width="1330" alt="основна фотографія сторінки">
 <footer class="page-footer">
  <svg width="220" height="60">
     <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
