--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content=" пивний блог про пиво і пивоваріння" >
     <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="images/hop.jpg">
+    <link rel="icon" href="images/hop.jpg>
     <title>Beer&Brewing Blog</title>
 </head>
 <body>
@@ -31,8 +31,6 @@
 <h2> Остані Публікації</h2>
 <h3> <a href="aboutme.html">Про мене</a> </h3>
 <img src="images/aboutmephoto.jpg" height="400" width="350" alt="моя фотографія">
-
-
  <footer class="page-footer">
  <svg width="220" height="60">
     <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
