--- a/brewing.html
+++ b/brewing.html
@@ -10,9 +10,6 @@
 </head>
 <body>
 <header class="page-header">
-      <div class="container">
-      093-076-3381<br>
-      juramykhailiv@gmail.com
     </div>
 <h1></h1>
     <nav class="top-menu">
@@ -28,6 +25,7 @@
         </ul>
     </nav>
 </header>
+<img src="images/brewing-mainpage.jpg" height="400" width="1330" alt="основна фотографыя сторінки">
 <footer class="page-footer">
  <svg width="220" height="60">
     <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
