--- a/aboutme.html
+++ b/aboutme.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Про мене</title>
-</head>
-<body>
-<nav>
-<ul class="menu-main">
-      <li>
-            <a href="index.html">Назад</a>
-      </li>
-</ul>
-</nav>
-<h1> Трішки інформації про мене</h1>
-<h2>Привіт усім, мене звати Юра</h2>
-<p>І я вирішив створити свій пивний блог, де буду описувати хороші сорти пива,новинки вітчизняних і зарубіжних  пивоварень ,<br> будемо пробувати варити своє домашнє пиво і розбиратися у цій технології, підберемо найкращі дріжджі  солод і хміль, <br>також опишу найкращі на мою думку пивні заклади Львова і можливо і інших міст.</p>
-<p> Цей блог вирішив також стоврити у <a href="https://t.me/beersandbrewing"> телеграмі</a> та інстаграмі, жож підписуйтеся і не соромтеся )<p>
-<p>Мені 25 рочків і я працюю барменом у одному львівському закладі, вважаю пиво найкращим алкогольним напоєм і дотримаюся правила: "краще випити менше, але хорошого та якісного" тому якщо в мене є вибір взяти 3 пляшки "Тетеріва" , або якогось "Закарпаського" то на ті гроші я візьму якесь одне, але хороше імпортне пиво, чи якесь крафтове наших пивоварень.</p>
-<p>Ця ідея в мене появилася вже давно, а все через те що мені надзвичайно важко вдається можливість вибору, все починається<br> від закладу в який я хочу піти і закінчується банально тим, що мені навіть важко вибрати яке я пиво буду пити.</p>
-</p>Тому я подумав чому не створити щось таке , що можливо допоможе комусь зробити легший вибір , напевно навіть не відомо скільки<br> точно існує
- сортів пива .Крім звичного світлого, темного і нефільтрованого, кожен виробник намагається здивувати пивного гурмана<br> різноманіттям сортів і яскравістю смаків. Їх на це надихнули малі броварні, які задали світовий тренд різноманітності пивних смаків.<br>
-І все ж можна виділити 11 основних сортів, на які спирається у виробництві кожен пивний бренд, але і 11 видів це також забагато,<br> тому я спробую найкраще описати кожен з них.
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Про мене</title>
+    </head>
+    <body>
+        <nav>
+            <ul class="menu-main">
+                <li>
+                    <a href="index.html">Назад</a>
+                </li>
+            </ul>
+        </nav>
+        <h1>Трішки інформації про мене</h1>
+        <h2>Привіт усім, мене звати Юра</h2>
+        <p>
+            І я вирішив створити свій пивний блог, де буду описувати хороші сорти пива,новинки вітчизняних і зарубіжних  пивоварень ,<br>
+            будемо пробувати варити своє домашнє пиво і розбиратися у цій технології, підберемо найкращі дріжджі  солод і хміль, <br>також опишу найкращі на мою думку пивні заклади Львова і можливо і інших міст.
+        </p>
+        <p>
+            Цей блог вирішив також стоврити у <a href="https://t.me/beersandbrewing">телеграмі</a>
+            та інстаграмі, жож підписуйтеся і не соромтеся )
+        <p>
+        <p>Мені 25 рочків і я працюю барменом у одному львівському закладі, вважаю пиво найкращим алкогольним напоєм і дотримаюся правила: "краще випити менше, але хорошого та якісного" тому якщо в мене є вибір взяти 3 пляшки "Тетеріва" , або якогось "Закарпаського" то на ті гроші я візьму якесь одне, але хороше імпортне пиво, чи якесь крафтове наших пивоварень.</p>
+        <p>
+            Ця ідея в мене появилася вже давно, а все через те що мені надзвичайно важко вдається можливість вибору, все починається<br>від закладу в який я хочу піти і закінчується банально тим, що мені навіть важко вибрати яке я пиво буду пити.
+        </p>
+</p>Тому я подумав чому не створити щось таке , що можливо допоможе комусь зробити легший вибір , напевно навіть не відомо скільки<br>
+точно існує
+ сортів пива .Крім звичного світлого, темного і нефільтрованого, кожен виробник намагається здивувати пивного гурмана<br>
+різноманіттям сортів і яскравістю смаків. Їх на це надихнули малі броварні, які задали світовий тренд різноманітності пивних смаків.<br>
+І все ж можна виділити 11 основних сортів, на які спирається у виробництві кожен пивний бренд, але і 11 видів це також забагато,<br>тому я спробую найкраще описати кожен з них.
+
 
 </p>
- <div class="container">
-      <a href="tel:+380930763381">Номер мобільного 093-076-3381</a><br>
-      <a href="juramykhailiv@gmail.com">Моя скринька</a> <br>
-      <a href="https://t.me/wkvarock">Я в Telegram</a>
-    </div>
-
-</body>
-</html>
+<div class="container">
+    <a href="tel:+380930763381">Номер мобільного 093-076-3381</a>
+    <br>
+    <a href="juramykhailiv@gmail.com">Моя скринька</a>
+    <br>
+    <a href="https://t.me/wkvarock">Я в Telegram</a>
+</div>
+</body></html>
