--- a/beer.html
+++ b/beer.html
@@ -48,7 +48,7 @@
 
 <p><b>Бурий ель</b> (Brown Ale)</p>
 
-<p<b>>Бурий (або коричневий) ель </b>,  що з`явився ще в кінці XVIII століття, містить трохи хмелю і готується зі 100-відсоткового темного солоду. Бурий ель чітко пахне смаженим солодом. Американські сорти трохи більше віддають хмелем. Пиво має карамельно-горіховий присмак.</p>
+<p> <b> Бурий (або коричневий) ель </b>,  що з`явився ще в кінці XVIII століття, містить трохи хмелю і готується зі 100-відсоткового темного солоду. Бурий ель чітко пахне смаженим солодом. Американські сорти трохи більше віддають хмелем. Пиво має карамельно-горіховий присмак.</p>
 
 <p><b>Портер (Porter)</b></p>
 
