--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content=" пивний блог про пиво і пивоваріння" >
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="images/hop.jpg>
-    <title>Beer&Brewing Blog</title>
-</head>
-<body>
-<header class="page-header">
-      <div class="container">
-    </div>
-    <nav class="top-menu">
-      <ul class="menu-main">
-      <li>
-            <a href="index.html"> Домашня сторінка</a>
-        <li>
-            <a href="beer.html">Пиво</a>
-        <li>
-            <a href="brewing.html">Пивоваріння </a>
-        <li>
-            <a href="beerpubs.html">Пивні місця</a>
-        </ul>
-    </nav>
-</header>
-<img src="images/home-page-beer-river.jpg" height="400" width="1330" alt="основна фотографыя сторінки">
-<article> Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкращих його сортів , технології приготування та місця де можна випити цей чудовий напій. </article>
-<h2> Остані Публікації</h2>
-<h3> <a href="aboutme.html">Про мене</a> </h3>
-<img src="images/aboutmephoto.jpg" height="400" width="350" alt="моя фотографія">
- <footer class="page-footer">
- <svg width="220" height="60">
-    <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
-    </svg> <br>
-    <a href="https://t.me/beersandbrewing"> Телеграм канал</a><br>
-    Інстаграм
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content=" пивний блог про пиво і пивоваріння">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="icon" href="images/hop.jpg">
+        <title>Beer &Brewing Blog </title>
+    </head>
+    <body>
+        <header class="page-header">
+            <div class="container"></div>
+            <nav class="top-menu">
+                <ul class="menu-main">
+                    <li>
+                        <a href="index.html">Домашня сторінка</a>
+                    <li>
+                        <a href="beer.html">Пиво</a>
+                    <li>
+                        <a href="brewing.html">Пивоваріння </a>
+                    <li>
+                        <a href="beerpubs.html">Пивні місця</a>
+                </ul>
+            </nav>
+        </header>
+        <img src="images/home-page-beer-river.jpg" height="400" width="1330" alt="основна фотографыя сторінки">
+        <article>Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкращих його сортів , технології приготування та місця де можна випити цей чудовий напій. </article>
+        <h2>Остані Публікації</h2>
+        <h3>
+            <a href="aboutme.html">Про мене</a>
+        </h3>
+        <img src="images/aboutmephoto.jpg" height="400" width="350" alt="моя фотографія">
+        <footer class="page-footer">
+            <svg width="220" height="60">
+                <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
+            </svg>
+            <br>
+            <a href="https://t.me/beersandbrewing">Телеграм канал</a>
+            <br>Інстаграм
+ 
+        </footer>
+    </body>
 </html>
