--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 </ul>
             </nav>
         </header>
-        <img src="images/home-page-beer-river.jpg" height="400" width="1330" alt="основна фотографыя сторінки">
+        <img src="images/home-page-beer-river.jpg" height="400" width="1330" alt="основна фотографія сторінки">
         <article>Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкращих його сортів , технології приготування та місця де можна випити цей чудовий напій. </article>
         <h2>Остані Публікації</h2>
         <h3>
             <a href="aboutme.html">Про мене</a>
         </h3>
-        <img src="images/aboutmephoto.jpg" height="400" width="350" alt="моя фотографія">
+        <img src="images/aboutmephoto.jpg" height="400" width="350" alt="фотографія Юри Михайлів">
         <footer class="page-footer">
             <svg width="220" height="60">
                 <line x1="220" y1="40" x2="5" y2="40" stroke="black"/>
