--- a/beer.html
+++ b/beer.html
@@ -21,7 +21,7 @@
             <a href="beerpubs.html">Пивні місця</a>
         </ul>
     </nav>
-    <img src="images/beer-mainpage.jpg" height="400" width="1330" alt="основна фотографыя сторінки">
+    <img src="images/beer-mainpage.jpg" height="400" width="1330" alt="основна фотографія сторінки">
 </header>
 <h2>Яке  пиво буває </h2>
 <p>Скільки сортів пива існує? Цього, напевно, не знає ніхто. Крім звичного світлого, темного і нефільтрованого, кожен виробник намагається здивувати пивного гурмана різноманіттям сортів і яскравістю смаків. Їх на це надихнули малі броварні, які задали світовий тренд різноманітності пивних смаків.</p>
