--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                 </ul>
             </nav>
             <div class="banner">
-            <p class="title">Beer&rewing Blog  <p>
+            <p class="title">Beer&Brewing Blog </p>
+            </div>
         </header>
         <div class="banner">
         <img  src="images/home-page-beer-river.jpg" height="400" width="980" alt="пивний сет">
-        <article>Пивний блог для поціновувачів смачного та якісного пива, рецепти та опис найкращих його сортів , технології приготування та місця де можна випити цей чудовий напій. </article>
         <h2 id="last-publications">Остані Публікації</h2>
+        </div>
         <main>
            <h2 id="publications">Публікації</h2>
            <div class="publications-list">
@@ -67,11 +68,10 @@
                     <button class="button card-button">Детальніше</button>
                 </div>
             </article>
-    </main>
-
-        
+           </div>
+        </main>
         <h3>
-            <a href="aboutme.html">Про мене</a>
+            <a id="aboutme" href="aboutme.html">Про мене</a>
         </h3>
         <img src="images/aboutmephoto.jpg" height="400" width="350" alt="фотографія Юри Михайлів">
         <footer class="page-footer">
