--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </article>
             <article class="article-card">
-                <h3>Banana Bread Beer -Eagle Brewery</h3>
+                <h3>Banana Bread Beer - Eagle </h3>
                 <img src="images/Eagle-Image-Banana-Bread.png" alt="Бананове пиво">
                 <p>Пиво зі смаком банана.</p>
                 <div class="button-container">
@@ -61,7 +61,7 @@
                 </div>
             </article>
             <article class="article-card">
-                <h3>Sticky Toffee Pudding - Eagle Brewery</h3>
+                <h3>Sticky Toffee Pudding - Eagle </h3>
                 <img src="images/Eagle-Image-Sticky-Toffee.png" alt="Пиво зі смаком Пудинга">
                 <p>Пиво зі смаком пудинга.</p>
                 <div class="button-container">
