--- a/beerpubs.html
+++ b/beerpubs.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="images/hop.jpg">
-    <title>Пивні заклади</title>    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    <title>Пивні заклади</title>  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
  <body class="container">
@@ -48,7 +49,7 @@
       <a href="brewing.html"></a>
     </div>
     <div class="carousel-item">
-      <img src="images/pab.jpg" class="d-block w-100" alt="...">images/pab.jpg
+      <img src="images/pab.jpg" class="d-block w-100" alt="середньостатистичний паб" >
       <a href="beerpubs.html"></a>
     </div>
   </div>
